<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        android:id="@+id/logo"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/logo"
         >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:paddingLeft="5dp"/>
        <EditText android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/username_hint"
            android:paddingLeft="5dp"
            android:background="@drawable/edittext_bg"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"/>
        <EditText android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:background="@drawable/edittext_bg"/>
        <CheckBox android:id="@+id/rememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingTop="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="onLoginClick"/>
        
    </LinearLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/footer_text"
        android:gravity="center"
        android:layout_marginBottom="50dp"/>
    <ProgressBar android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
